added photos and a short description to the fliehkraft page

--- a/actions/fliehkraft.html
+++ b/actions/fliehkraft.html
@@ -119,17 +119,17 @@ HoomanBean(w/ Voice), Engineer, Entrepreneur, H4ck3r, Gardener
     <!-- PROJECT HEADER -->
     <div id="project-header">
 
-      <div class="main-title">Project Name</div>
-      <div class="body-text">A small description about the project goes here, get the reader hooked on the project and tell them why they should continue to read this page. Give it a sweet tagline.</div>
-      <img loading="lazy" class="project-header-image" src="../assets/images/desktop.jpeg">
+      <div class="main-title">Fliehkraft: Pop-up makerspace in a residential project for people migrating to Germany from the middle east.</div>
+      <div class="body-text">We occupied an unused room, deployed a pop-up makerspace, started building 3D printers and the camp staff and the residents were so curious and they decided that they liked the project so much that we were given a small project room and were invited to stay and continue collaborating together with residents for about a year.</div>
+      <img loading="lazy" class="project-header-image" src="../assets/images/fliehkraft_logo.jpg">
       </div>
 
 
       <div id="project-details">
-        <div class="subheader-text">Project Details / Background</div>
+        <div class="subheader-text">Project Details</div>
         <div class="project-details-content">
-          <div class="body-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Tristique risus nec feugiat in fermentum. Sed id semper risus in hendrerit gravida. Placerat duis ultricies lacus sed. Id neque aliquam vestibulum morbi blandit cursus risus. Elit pellentesque habitant morbi tristique senectus et netus et. Elementum tempus egestas sed sed risus pretium quam. Nibh ipsum consequat nisl vel pretium lectus quam id leo. Vitae congue mauris rhoncus aenean vel elit.</div>
-          <div class="body-text">Vitae justo eget magna fermentum. Imperdiet nulla malesuada pellentesque elit eget gravida. Aliquet nec ullamcorper sit amet. Aliquet sagittis id consectetur purus. Ac tortor dignissim convallis aenean. Enim neque volutpat ac tincidunt vitae. Lobortis feugiat vivamus at augue. Platea dictumst vestibulum rhoncus est pellentesque elit ullamcorper. Viverra orci sagittis eu volutpat. Massa tincidunt nunc pulvinar sapien et ligula. Donec enim diam vulputate ut.</div>
+          <div class="body-text">My intention was to connect the Berlin hacker and maker scene to the camp and open a space where people of all ages who were interested in electronics, computers, 3d printing, making, DIY and also alternative culture could come and chat and collaborate or just print something out. The best action I did at the camp right at the start was simply setting up a freifunk node / wireless access point and putting up some posters giving the residents of the camp free wifi.</div>
+          <div class="body-text">In the words of my project partner and dear friend Thomas (who was working on site at the time as a social worker and has a background in Economics). DE: "Wir brauchen mehr Räume, an denen sich Menschen selbst basis ökonomisch bilden. Flüchtlingsunterkünfte können solche Räume sein." EN: "We need more spaces where people can educate themselves economically. Refugee shelters can be such spaces."</div>
         </div>
       </div>
 
@@ -138,16 +138,10 @@ HoomanBean(w/ Voice), Engineer, Entrepreneur, H4ck3r, Gardener
         <!-- TODO - Change the 'subheader-text' to whatever you want the Gallery section header to say -->
         <div class="subheader-text">Image Gallery</div>
         <div class="project-gallery-content">
-fliehkraft_herbwalk.jpg
-fliehkraft_logo.jpg
-fliehkraft_nettles.jpg
-fliehkraft_spool_holder.jpg
-fliehkraft_wallart.jpg
-fliehkraft_first_print.jpg
 
           <div class="gallery-image-container half-width">
             <img loading="lazy" src="../assets/images/fliehkraft_build1.jpg" class="gallery-image">
-            <span class="image-caption">First day, occupied an unused room and began building a Reprap (in a refugee camp)! With a little help from my friends :)</span>
+            <span class="image-caption">First day, occupied an unused room and began building a Reprap! With a little help from my friends :)</span>
           </div>
 
           <div class="gallery-image-container half-width">
@@ -169,17 +163,22 @@ fliehkraft_first_print.jpg
           <div class="gallery-image-container half-width">
             <img loading="lazy" src="../assets/images/fliehkraft_lab_early.jpg" class="gallery-image">
             <span class="image-caption">The host organisation and the people at the camp support what we are doing so we got a lab room! Yipi!</span>
-          </div>          
+          </div>
+
+          <div class="gallery-image-container half-width">
+            <img loading="lazy" src="../assets/images/fliehkraft_wallart.jpg" class="gallery-image">
+            <span class="image-caption">Some nice wallart for our new project space!</span>
+          </div>                   
+
+          <div class="gallery-image-container half-width">
+            <img loading="lazy" src="../assets/images/fliehkraft_first_print.jpg" class="gallery-image">
+            <span class="image-caption">A closeup on one of the first longer prints.</span>
+          </div>
 
           <div class="gallery-image-container half-width">
             <img loading="lazy" src="../assets/images/fliehkraft_build5.jpg" class="gallery-image">
             <span class="image-caption">Measuring before I tighten the nuts against each other on the threaded rod.</span>
           </div>
-
-          <div class="gallery-image-container half-width">
-            <img loading="lazy" src="../assets/images/fliehkraft_buttons.jpg" class="gallery-image">
-            <span class="image-caption">The printers are working, printing buttons for little (useful) presents / giveaways.</span>
-          </div>          
 
           <div class="gallery-image-container half-width">
             <img loading="lazy" src="../assets/images/fliehkraft_callibration.jpg" class="gallery-image">
@@ -191,6 +190,16 @@ fliehkraft_first_print.jpg
             <span class="image-caption">2 working repraps and one final build well underway</span>
           </div>
 
+          <div class="gallery-image-container half-width">
+            <img loading="lazy" src="../assets/images/fliehkraft_buttons.jpg" class="gallery-image">
+            <span class="image-caption">The printers are working, printing buttons for little (useful) presents / giveaways.</span>
+          </div> 
+
+          <div class="gallery-image-container half-width">
+            <img loading="lazy" src="../assets/images/fliehkraft_spool_holder.jpg" class="gallery-image">
+            <span class="image-caption">Making a spool holder on one of the working printers.</span>
+          </div> 
+
           <div class="gallery-image-container">
             <img loading="lazy" src="../assets/images/fliehkraft_nettles.jpg" class="gallery-image">
             <span class="image-caption">Picking nettle leaves (without getting stung)— in Marzahn, Berlin, Germany.</span>
@@ -198,12 +207,12 @@ fliehkraft_first_print.jpg
 
           <div class="gallery-image-container">
             <img loading="lazy" src="../assets/images/fliehkraft_herbwalk.jpg" class="gallery-image">
-            <span class="image-caption">Taking walks in the local neighbourhood with friends from the camp identifying and harvesting local edible and medicinal plants. Clockwise from top: Stinging Nettle, Rocket, Sorrel, St John's Wort, Borage, Large-leaved Lime flowers (commonly known as Linden in Germany), Ribwort Plantain— in Marzahn, Berlin, Germany.</span>
+            <span class="image-caption">Taking walks in the local neighbourhood with friends from the camp identifying and harvesting local edible and medicinal plants. Clockwise from top: Stinging Nettle, Rocket, Sorrel, St John's Wort, Borage-Family (Viper's bugloss / Echium vulgare), Large-leaved Lime flowers (commonly known as Linden in Germany), Ribwort Plantain— in Marzahn, Berlin, Germany.</span>
           </div>
 
           <div class="gallery-image-container half-width">
             <img loading="lazy" src="../assets/images/fliehkraft_wildsalad.jpg" class="gallery-image">
-            <span class="image-caption">We made a salad with wild Rucola, Sauerampfer, Rose petals, Spitzwegerich and Nettle (and a little bit cucumber from the supermarket)</span>
+            <span class="image-caption">We made a salad with wild Rucola, Sauerampfer, Rose petals, a few borage flowers, Spitzwegerich and Nettle (and a little bit cucumber from the supermarket)</span>
           </div>
 
           <div class="gallery-image-container half-width">
