stop calling people refugees! Big up anti-national embassy, Berlin. https://soundcloud.com/user-880247183

--- a/index.html
+++ b/index.html
@@ -284,7 +284,7 @@ HoomanBean(w/ Voice), Engineer, Entrepreneur, H4ck3r, Gardener
           <img loading="lazy" src="./assets/images/fliehkraft.jpg" class="project-image">
           <div class="project-card-text-container">
             <div class="subheader-text project-title">Fliehkraft</div>
-            <div class="body-text project-card-text">Participative Digital Fabrication Space in a Refugee Camp.</div>
+            <div class="body-text project-card-text">Participative Digital Fabrication Space in a Residential Project for people migrating from the Middle East.</div>
           </div>
           <a class="button" href="./actions/fliehkraft.html">
             <span class="button-text">Read More</span>
