fixed some links and put the hurricane hackers content into the div

--- a/actions/hurricanehackers.html
+++ b/actions/hurricanehackers.html
@@ -1,61 +1,3 @@
-https://github.com/hurricanehackers
-http://bit.ly/hh-linklist
-http://bit.ly/hh-projects
-http://irc.lc/freenode/hurricanehackers.
-
-“Our Promise:
-1. We see a world where people are empowered to help one another during disasters
-2. We seek to replace complexity and despair with simplicity and hope
-3. We promise to do our best to “Empower You to provide disaster relief” and hope you will join us in creating a better world
-4. If you believe what we believe, let’s change the world together”
-
-HurricaneHackers.com: This page. An index of links to #HurricaneHackers pages and projects.
-HH Blog: http://blog.hurricanehackers.com: a blog about projects we’re working on.
-HH Linklist: http://bit.ly/hh-linklist | An annotated list of links to interesting resources, projects, tools, etc. 
-HH Projects: http://bit.ly/hh-projects-read | A page with 1. a project brainstorm space, and 2. an active projects space. Go here if you’re looking to actively participate in making something :) Read-only at the moment due to high traffic, to get access head over to the IRC.
-HH Code on Github: https://github.com/hurricanehackers 
-HH IRC: our main realtime communication channel is http://irc.lc/freenode/hurricanehackers 
-
-#HurricaneHackers key links:
-Blog: http://blog.hurricanehackers.com 
-Index: http://bit.ly/hh-index 
-Linklist: http://bit.ly/hh-linklist
-Projects: http://bit.ly/hh-projects-read
-Chat: IRC, Freenode, #hurricanehackers: http://irc.lc/freenode/hurricanehackers 
-
-
-#HurricaneHackers:  Home | Blog | Linklist | Projects | Github | IRC | Facebook | Twitter |
-
-
-Hola! Welcome to #HurricaneHackers: a space for gathering & sharing information, and organizing tech+social projects related to Hurricane Sandy.
-
-
-Please keep in mind: assume that the projects listed on this site are in development and not ready for general use. Don’t promote them to the general public as working platforms, unless you have verified that the particular project you're focusing on is actually live, active, and maintained. Thanks!
-
-
-Allies and Friends: <a href="http://interoccupy.net/occupysandy/">Occupy Sandy</a> | <a href="http://www.nytechresponds.org/">NYTechResponds</a> | <a href="http://crisiscommons.org/">CrisisCommons</a> | <a href="https://recovers.org/">Recovers.org</a>
-
-
-Key HH Links
-
-<a href="https://web.archive.org/web/20130211150541/https://docs.google.com/document/pub?id=1SGcfQz13ce4FfB-QHKF3WLwxHoCRGBouuvZn-3aoX0k">HurricaneHackers.com</a>: This page. An index of links to #HurricaneHackers pages and projects.
-HH Blog: <a href="https://web.archive.org/web/20130106140409/http://www.blog.hurricanehackers.com/"> http://blog.hurricanehackers.com</a>: a blog about projects we’re working on.
-HH Linklist: http://bit.ly/hh-linklist | An annotated list of links to interesting resources, projects, tools, etc. 
-HH Projects: http://bit.ly/hh-projects-read | A page with 1. a project brainstorm space, and 2. an active projects space. Go here if you’re looking to actively participate in making something :) Read-only at the moment due to high traffic, to get access head over to the IRC.
-HH Code on Github: https://github.com/hurricanehackers 
-HH IRC: our main realtime communication channel is http://irc.lc/freenode/hurricanehackers 
-Contact info
-twitter: @hurricanehackrs | email list: hurricanehackers@mit.edu (email petey@mit.edu to subscribe) | Internet Relay Chat: http://irc.lc/freenode/hurricanehackers
-
-
-
-Notes
-
-
-Please RT, Share, +1, etc, using something like the following: Hacking Hurricane response w/@hurricanehackrs at http://hurricanehackers.com #Sandy #Frankenstorm #HurricaneHackers
-
-
-
 <!--                                                                              
                      _   _          _            _     _                           
                     | | | |        | |          | |   (_)                          
@@ -170,24 +112,81 @@ HoomanBean(w/ Voice), Engineer, Entrepreneur, H4ck3r, Gardener
       <a href="../service/business_development.html">> Business Development</a>
     </div>
   </div>
-  <!-- Use any element to open/show the overlay navigation menu -->
-  <span onclick="openNav()">open</span>
+
   <!-- MAIN PAGE CONTENT -->
   <div id="main-content">
 
     <!-- PROJECT HEADER -->
     <div id="project-header">
 
-      <div class="main-title">Nanode</div>
-      <div class="body-text">Nanode is an open source Arduino-like board that has in-built web connectivity. It is a low cost platform for creative development of web connected ideas. Languages: C</div>
+      <div class="main-title">Hurricane Hackers</div>
+      <div class="body-text">A great quote which really embodys the spirit of the action and the mass collaboration that resulted from it:
+      <br>
+      “Our Promise:
+      <br>
+      1. We see a world where people are empowered to help one another during disasters
+      <br>
+      2. We seek to replace complexity and despair with simplicity and hope
+      <br>
+      3. We promise to do our best to “Empower You to provide disaster relief” and hope you will join us in creating a better world
+      <br>
+      4. If you believe what we believe, let’s change the world together”</div>
       <img loading="lazy" class="project-header-image" src="../assets/images/nanode.png">
       </div>
 
 
       <div id="project-details">
-        <div class="subheader-text">Project Details / Background</div>
+        <div class="subheader-text">Background</div>
         <div class="project-details-content">
-          <div class="body-text">Nanode is an open source Arduino-like board that has in-built web connectivity. It connects to a range of wireless, wired and ethernet interfaces. It allows you to develop web based sensor and control systems - giving you web access to six analogue sensor lines and six digital I/O lines. It costs under £20 as an easy build it yourself kit. Nanode was designed with Hacking in mind. </div>
+          <div class="body-text">https://github.com/hurricanehackers
+http://bit.ly/hh-linklist
+http://bit.ly/hh-projects
+http://irc.lc/freenode/hurricanehackers.
+
+HurricaneHackers.com: This page. An index of links to #HurricaneHackers pages and projects.
+HH Blog: http://blog.hurricanehackers.com: a blog about projects we’re working on.
+HH Linklist: http://bit.ly/hh-linklist | An annotated list of links to interesting resources, projects, tools, etc. 
+HH Projects: http://bit.ly/hh-projects-read | A page with 1. a project brainstorm space, and 2. an active projects space. Go here if you’re looking to actively participate in making something :) Read-only at the moment due to high traffic, to get access head over to the IRC.
+HH Code on Github: https://github.com/hurricanehackers 
+HH IRC: our main realtime communication channel is http://irc.lc/freenode/hurricanehackers 
+
+#HurricaneHackers key links:
+Blog: http://blog.hurricanehackers.com 
+Index: http://bit.ly/hh-index 
+Linklist: http://bit.ly/hh-linklist
+Projects: http://bit.ly/hh-projects-read
+Chat: IRC, Freenode, #hurricanehackers: http://irc.lc/freenode/hurricanehackers 
+
+
+#HurricaneHackers:  Home | Blog | Linklist | Projects | Github | IRC | Facebook | Twitter |
+
+
+Hola! Welcome to #HurricaneHackers: a space for gathering & sharing information, and organizing tech+social projects related to Hurricane Sandy.
+
+
+Please keep in mind: assume that the projects listed on this site are in development and not ready for general use. Don’t promote them to the general public as working platforms, unless you have verified that the particular project you're focusing on is actually live, active, and maintained. Thanks!
+
+
+Allies and Friends: <a href="http://interoccupy.net/occupysandy/">Occupy Sandy</a> | <a href="http://www.nytechresponds.org/">NYTechResponds</a> | <a href="http://crisiscommons.org/">CrisisCommons</a> | <a href="https://recovers.org/">Recovers.org</a>
+
+
+Key HH Links
+
+<a href="https://web.archive.org/web/20130211150541/https://docs.google.com/document/pub?id=1SGcfQz13ce4FfB-QHKF3WLwxHoCRGBouuvZn-3aoX0k">HurricaneHackers.com</a>: This page. An index of links to #HurricaneHackers pages and projects.
+HH Blog: <a href="https://web.archive.org/web/20130106140409/http://www.blog.hurricanehackers.com/"> http://blog.hurricanehackers.com</a>: a blog about projects we’re working on.
+HH Linklist: http://bit.ly/hh-linklist | An annotated list of links to interesting resources, projects, tools, etc. 
+HH Projects: http://bit.ly/hh-projects-read | A page with 1. a project brainstorm space, and 2. an active projects space. Go here if you’re looking to actively participate in making something :) Read-only at the moment due to high traffic, to get access head over to the IRC.
+HH Code on Github: https://github.com/hurricanehackers 
+HH IRC: our main realtime communication channel is http://irc.lc/freenode/hurricanehackers 
+Contact info
+twitter: @hurricanehackrs | email list: hurricanehackers@mit.edu (email petey@mit.edu to subscribe) | Internet Relay Chat: http://irc.lc/freenode/hurricanehackers
+
+
+
+Notes
+
+
+Please RT, Share, +1, etc, using something like the following: Hacking Hurricane response w/@hurricanehackrs at http://hurricanehackers.com #Sandy #Frankenstorm #HurricaneHackers</div>
         </div>
       </div>
 
