added another nanode photo and beginning to work on the talks section

--- a/talks/fabrica.html
+++ b/talks/fabrica.html
@@ -113,17 +113,16 @@ HoomanBean(w/ Voice), Engineer, Entrepreneur, H4ck3r, Gardener
       <a href="../service/business_development.html">> Business Development</a>
     </div>
   </div>
-  <!-- Use any element to open/show the overlay navigation menu -->
-  <span onclick="openNav()">open</span>
+
   <!-- MAIN PAGE CONTENT -->
   <div id="main-content">
 
     <!-- PROJECT HEADER -->
     <div id="project-header">
 
-      <div class="main-title">Nanode</div>
+      <div class="main-title">Trust but Verify</div>
       <div class="body-text">Nanode is an open source Arduino-like board that has in-built web connectivity. It is a low cost platform for creative development of web connected ideas. Languages: C</div>
-      <img loading="lazy" class="project-header-image" src="../assets/images/nanode.png">
+      <img loading="lazy" class="project-header-image" src="../assets/images/trust_but_verify.png">
       </div>
 
 
