added some new content, also some experimental feature to the homepage

--- a/index.html
+++ b/index.html
@@ -126,7 +126,11 @@ HoomanBean(w/ Voice), Engineer, Entrepreneur, H4ck3r, Gardener
           <div class="body-text">I am an electronic engineer, community organizer, civic media expert, and entrepreneur.</div>
         </div>
         <a class="button" id="my-work-link">
-          <span class="button-text">Check out my projects</span>
+          <span class="button-text">Check out the projects I have done</span>
+          <img loading="lazy" src="./assets/icons/arrow-right.svg" class="right-arrow-icon" />
+        </a>
+        <a class="button" id="my-service-link">
+          <span class="button-text">Check out the services I provide</span>
           <img loading="lazy" src="./assets/icons/arrow-right.svg" class="right-arrow-icon" />
         </a>
       </div>
@@ -137,9 +141,87 @@ HoomanBean(w/ Voice), Engineer, Entrepreneur, H4ck3r, Gardener
         <div class="body-text">I am an experienced technologist who establishes technical infrastructure and fosters social patterns that enable collaboration, participation, and innovation. As a co-founder of Sukey, I helped create a platform to keep demonstrators safe, mobile and informed. Additionally, I've been involved with other initiatives like UCLOccupation, OccupyLSX tech, CryptopartyLondon, Hurricane Hackers, Open Source Ecology. I have also had the experience of living in an Eco Village for 5 years. My background includes working in industry for various companies while participating in local Hackspace communities around the world. Embracing hacker culture, I repair and modify my own belongings as well as assisting others to become more empowered through this approach. I hold a BEng with honors from Durham University and am a member of the Institution of Engineering and Technology (IET). Overall, my work focuses on creating transformative solutions using open source hardware and software and civic media tools such as 3D printers or apps designed for direct action while promoting positive change through global collaborative efforts.</div>
       </div>
     </div>
-    <!-- PROJECTS / MY WORK SECTION -->
+    <!-- Project Cards / Sections -->
     <div id="my-work-section">
-      <!-- TODO - Change the subheader-text to whatever you want the Projects section header to say -->
+      <!-- Services Section -->
+      <span class="subheader-text">Services:</span>
+      <div class="projects-container">
+
+        <div class="project-card">
+          <img loading="lazy" src="./assets/images/SAMBiOtechie.png" class="project-image">
+          <div class="project-card-text-container">
+            <div class="subheader-text project-title">IT / Engineering Consultancy</div>
+            <div class="body-text project-card-text">Freelance IT Consultant and professionally registered Electronic Engineer, I bring a unique combination of passion and expertise to the table. My extensive experience in engineering consultancy, embedded development, security consulting, web development, and business development makes me an invaluable asset for businesses seeking to optimize their digital presence while ensuring reliable systems integration. This is what "full-stack" looks like.</div>
+          </div>
+          <a class="button" href="./service/engineering.html">
+            <span class="button-text">Read More</span>
+            <img loading="lazy" src="./assets/icons/arrow-right.svg" class="right-arrow-icon" />
+          </a>
+        </div>
+        <div class="project-card">
+          <img loading="lazy" src="./assets/images/cryptopartylondon.jpg" class="project-image">
+          <div class="project-card-text-container">
+            <div class="subheader-text project-title">Security Engineering and Cybersecurity Consulting</div>
+            <div class="body-text project-card-text">In the age where most devices have an IP address, security engineering in hardware design and product development is more critical than ever. It is important therefore to ensure robustness from the ground up. In today's interconnected world, safeguarding hardware design and product development is crucial to maintaining integrity across all aspects of your business. With my expertise in security engineering, I can help you create secure products that protect sensitive information while adhering to industry standards. Having secure hardware and systems is only a part of the puzzle, those systems also exist and are used in the world, by real people and on the public internet. Together we can create personalized security strategies, reliable network or hardware designs or custom-made employee training programs that reinforce your business against cyberattacks. Don't leave the safety of your digital domain to chance – let's collaborate, tell me about the needs of your organisation and I will provide exceptional service to bring you peace of mind and guide you towards a secure future!</div>
+          </div>
+          <a class="button" href="./service/security.html">
+            <span class="button-text">Read More</span>
+            <img loading="lazy" src="./assets/icons/arrow-right.svg" class="right-arrow-icon" />
+          </a>
+        </div>
+        <div class="project-card">
+          <img loading="lazy" src="./assets/images/SAMBiOtechie.png" class="project-image">
+          <div class="project-card-text-container">
+            <div class="subheader-text project-title">Green Engineering and Sustainability Consulting</div>
+            <div class="body-text project-card-text">Let's put aside the empty gestures of green-washing and superficial corporate social responsibility, leaving them to decompose with the rest of the 💩 on the compost heap. With my love of nature combined with my engineering expertise, I express my preference for resilience and sustainability in both system design and also in my personal life, I can confidently guide businesses and individuals genuinely committed to enhancing their resilience and sustainable practice with integrity.</div>
+          </div>
+          <a class="button" href="./service/sustainability.html">
+            <span class="button-text">Read More</span>
+            <img loading="lazy" src="./assets/icons/arrow-right.svg" class="right-arrow-icon" />
+          </a>
+        </div>                
+
+    </div>
+
+      <span class="subheader-text">Recent Clients:</span>
+      <div class="projects-container">
+        <div class="project-card">
+          <img loading="lazy" src="./assets/images/SAMBiOtechie.png" class="project-image">
+          <div class="project-card-text-container">
+            <div class="subheader-text project-title">IT Consulting for DragonDreaming</div>
+            <div class="body-text project-card-text"></div>
+          </div>
+          <a class="button" href="./clients/dd.html">
+            <span class="button-text">Read More</span>
+            <img loading="lazy" src="./assets/icons/arrow-right.svg" class="right-arrow-icon" />
+          </a>
+        </div>
+        <div class="project-card">
+          <img loading="lazy" src="./assets/images/SAMBiOtechie.png" class="project-image">
+          <div class="project-card-text-container">
+            <div class="subheader-text project-title">Security and IT Consulting for TeslaCo</div>
+            <div class="body-text project-card-text"></div>
+          </div>
+          <a class="button" href="./clients/tc.html">
+            <span class="button-text">Read More</span>
+            <img loading="lazy" src="./assets/icons/arrow-right.svg" class="right-arrow-icon" />
+          </a>
+        </div>        
+          <div class="project-card">
+          <img loading="lazy" src="./assets/images/SAMBiOtechie.png" class="project-image">
+          <div class="project-card-text-container">
+            <div class="subheader-text project-title">IT Consulting for MetaMate</div>
+            <div class="body-text project-card-text"></div>
+          </div>
+          <a class="button" href="./clients/mm.html">
+            <span class="button-text">Read More</span>
+            <img loading="lazy" src="./assets/icons/arrow-right.svg" class="right-arrow-icon" />
+          </a>
+        </div>
+    </div>    
+
+
+
       <span class="subheader-text">Projects:</span>
       <div class="projects-container">
         <div class="project-card">
