--- a/service/repair_feedback.html
+++ b/service/repair_feedback.html
@@ -1,29 +1,3 @@
-<h1>What the client says</h1>
-<h2>Best I have encountered.</h2>
-<p>By Natasha - 22 Apr 2010</p>
-<p>Granted I've not encountered many pc repairers. What I've seen has mostly been a room mate studying computing who is AWFUL and pc world which is amazingly rubbish. Sam appears to be of a different ilk. There should be more like him. He's worth every penny.</p>
-<p>&nbsp;</p>
-<h2>Excellent!</h2>
-<p>By yourmywifenowdave - Sep 23, 2009</p>
-<p>Dropped the laptop off in the evening crippled with viruses etc. Got it back the very next day and it runs like a dream. Highly recommended!!</p>
-<p>&nbsp;</p>
-<h2>DEll studio</h2>
-<p>By scott - Jul 25, 2009</p>
-<p>My laptop was running slow and had a number of issues with unwanted applications so on and also required anti malware etc loading. Sam was very skilled in his field and could explain in plain english what he was going to do and also how this was going to benefit my laptop, giving me advice on things to avoid for the future. It seems to me that Sam is committed to his trade and that of the need of the customer, thus a very honest service and fast service. I will be returning!</p>
-<p>&nbsp;</p>
-<h2>Excellent service</h2>
-<p>By Kaloyan - Mar 12, 2009</p>
-<p>Very personal service, unlike many computer repair companies and got the job done very quickly. Clearly knew exactly what he was doing and even gave me some solid advice for keeping my computer virus/problem free in the future! Brilliant, would highly recommend him to anyone!</p>
-<p>&nbsp;</p>
-<h2>Multiple repairs</h2>
-<p>By Phil - Mar 12, 2009</p>
-<p>Excellent repair service, helped with formatting and recovering data on multiple hard drives as well as repairing numerous faults on laptops and desktop PCs. Very good knowledge of latest technology and programs and also advised on programs and tips to prevent the problems happening again, would recommend to anyone looking for a repair service that does not just fix the symptoms.</p>
-<p>&nbsp;</p>
-<h2>Outstanding</h2>
-<p>By Joe - Mar 12, 2009<p>
-<p>Reassuring, communicative and thorough. Informed me at very step what was happening to my precious laptop and OK'd it with me first.</p>
-
-
 <!--                                                                              
                      _   _          _            _     _                           
                     | | | |        | |          | |   (_)                          
@@ -35,159 +9,143 @@ HoomanBean(w/ Voice), Engineer, Entrepreneur, H4ck3r, Gardener
 -->
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="utf-8">
-
-  <link rel="icon" href="../assets/icons/favicon.ico" />
-  <title>Samuel Carlisle BEng (hons) Dunelm MIET</title>
-  <meta name="description" content="A portfolio of the projects I have worked on and their impact, the services I provide, the skills that I have and some of my writings.">
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
- 
-  <link rel="stylesheet" href="../css/layout.css">
-  <link rel="stylesheet" href="../css/typography.css">
-  <link rel="stylesheet" href="../css/utilities.css">
-
-  <script defer src="../js/script.js"></script>
-</head>
-<body>
-  <!-- NAVBAR -->
-  <div class="navbar">
-    <a class="nav-title-link" href="../index.html">
-      <span class="nav-title">Samuel Carlisle BEng (hons) Dunelm MIET</span>
-    </a>
+  <head>
+    <meta charset="utf-8">
+    <link rel="icon" href="../assets/icons/favicon.ico" />
+    <title>Samuel Carlisle BEng (hons) Dunelm MIET</title>
+    <meta name="description" content="A portfolio of the projects I have worked on and their impact, the services I provide, the skills that I have and some of my writings.">
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="stylesheet" href="../css/layout.css">
+    <link rel="stylesheet" href="../css/typography.css">
+    <link rel="stylesheet" href="../css/utilities.css">
+    <script defer src="../js/script.js"></script>
+  </head>
+  <body>
+    <!-- NAVBAR -->
+    <div class="navbar">
+      <a class="nav-title-link" href="../index.html">
+        <span class="nav-title">Samuel Carlisle BEng (hons) Dunelm MIET</span>
+      </a>
       <span class="nav-title" title="menu" onclick="openNav()" class="button">≡</span>
-  </div>
-
-  <!-- The overlay -->
-  <div id="myNav" class="overlay">
-    <!-- Button to close the overlay navigation -->
-    <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
-    <!-- Overlay content -->
-    <div class="overlay-content">
-      <p>Home:</p>
-      <hr>
-      <a href="../index.html">> Home</a>
-      <a href="../home/bio.html">> Bio</a>
-      <a href="../home/contact.html">> Contact</a>
-      <p>Portfolio > Projects:</p>
-      <hr>
-      <a href="../projects/reprap.html">> Reprap Opensource 3D Printer</a>
-      <a href="../projects/animachine.html">> Animachine @Youin3D, Berlin</a>
-      <a href="../projects/buildingbanter.html">> Industrial Energy Monitoring</a>
-      <a href="../projects/classic4.html">> Medical Device Firmware</a>
-      <a href="../projects/nanode.html">> Nanode, DIY IoT Device</a>
-      <a href="../projects/ltfhc.html">> Electronic Medical Records</a>
-      <a href="../projects/thinkfarm.html">> Sustainability Research</a>
-      <a href="../projects/ose.html">> Open Source Ecology</a>
-      <p>Portfolio > Actions:</p>
-      <hr>
-      <a href="../actions/ucloccupation.html">> UCL Occupation</a>
-      <a href="../actions/occupylondon.html">> Occupy London Tech Team</a>
-      <a href="../actions/cryptoparty.html">> Cryptoparty London</a>
-      <a href="../actions/hurricanesandy.html">> Hurricane Hackers</a>
-      <a href="../actions/fliehkraft.html">> Fliehkraft, Berlin</a>
-      <a href="../actions/ecovillage.html">> Eco Village</a>
-      <p>Portfolio > Academia:</p>
-      <hr>
-      <a href="../academia/ch.html">> Secondary: Christ's Hospital</a>
-      <a href="../academia/durham.html">> Uni: Durham</a>
-      <a href="../academia/mit.html">> MIT Graduate App and Collab</a>
-      <p>Portfolio > Creative:</p>
-      <hr>
-      <a href="../art/writing.html">> Writing</a>
-      <a href="../art/artwork.html">> Artwork</a>
-      <a href="../art/concepts.html">> Concepts & Design</a>
-      <p>Portfolio > Talks:</p>
-      <hr>
-      <a href="../talks/ccc.html">> Assembly + Lightning Talk @CCC</a>
-      <a href="../talks/pp_intl.html">> RW Society @PP Intl</a>
-      <a href="../talks/fabrica.html">> Trust but Verify @Fabrica</a>
-      <a href="../talks/frontline.html">> Revolutionary Apps @Frontline Club</a>
-      <a href="../talks/talklist.html">> List: Talks</a>
-      <p>Lists of things I like:</p>
-      <hr>
-      <a href="../art/poetrylist.html">> Poetry</a>
-      <a href="../art/filmlist.html">> Film</a>
-      <a href="../art/booklist.html">> Books</a>
-      <a href="../art/musiclist.html">> Music</a>
-      <p>Service > Consulting</p>
-      <hr>
-      <a href="../service/engineering.html">> IT / Engineering</a>
-      <a href="../service/security.html">> Security</a>
-      <a href="../service/sustainability.html">> Sustainability</a>
-      <p>Service > Programming:</p>
-      <hr>
-      <a href="../service/programming.html">> Examples of My Work</a>
-      <p>Service > Webdev:</p>
-      <hr>
-      <a href="../service/web.html">> Webdesign and Development</a>
-      <a href="../service/web_examples.html">> Examples of My Work</a>
-      <a href="../service/web_feedback.html">> Client Feedback</a>
-      <p>Service > PC Repair</p>
-      <hr>
-      <a href="../service/onsite_repair.html">> Onsite Support</a>
-      <a href="../service/remote_repair.html">> Remote Support</a>
-      <a href="../service/repair_feedback.html">> Reviews</a>
-      <p>Service > Clients:</p>
-      <hr>
-      <a href="../service/current_clients.html">> Current Clients</a>
-      <a href="../service/previous_clients.html">> Previous Clients</a>
-      <p>Service > Personal:</p>
-      <hr>
-      <a href="../service/mentoring.html">> Mentoring</a>
-      <a href="../service/business_development.html">> Business Development</a>
     </div>
-  </div>
-  <!-- Use any element to open/show the overlay navigation menu -->
-  <span onclick="openNav()">open</span>
-  <!-- MAIN PAGE CONTENT -->
-  <div id="main-content">
-
-    <!-- PROJECT HEADER -->
-    <div id="project-header">
-
-      <div class="main-title">Nanode</div>
-      <div class="body-text">Nanode is an open source Arduino-like board that has in-built web connectivity. It is a low cost platform for creative development of web connected ideas. Languages: C</div>
-      <img loading="lazy" class="project-header-image" src="../assets/images/nanode.png">
+    <!-- The overlay -->
+    <div id="myNav" class="overlay">
+      <!-- Button to close the overlay navigation -->
+      <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
+      <!-- Overlay content -->
+      <div class="overlay-content">
+        <p>Home:</p>
+        <hr>
+        <a href="../index.html">> Home</a>
+        <a href="../home/bio.html">> Bio</a>
+        <a href="../home/contact.html">> Contact</a>
+        <p>Portfolio > Projects:</p>
+        <hr>
+        <a href="../projects/reprap.html">> Reprap Opensource 3D Printer</a>
+        <a href="../projects/animachine.html">> Animachine @Youin3D, Berlin</a>
+        <a href="../projects/buildingbanter.html">> Industrial Energy Monitoring</a>
+        <a href="../projects/classic4.html">> Medical Device Firmware</a>
+        <a href="../projects/nanode.html">> Nanode, DIY IoT Device</a>
+        <a href="../projects/ltfhc.html">> Electronic Medical Records</a>
+        <a href="../projects/thinkfarm.html">> Sustainability Research</a>
+        <a href="../projects/ose.html">> Open Source Ecology</a>
+        <p>Portfolio > Actions:</p>
+        <hr>
+        <a href="../actions/ucloccupation.html">> UCL Occupation</a>
+        <a href="../actions/occupylondon.html">> Occupy London Tech Team</a>
+        <a href="../actions/cryptoparty.html">> Cryptoparty London</a>
+        <a href="../actions/hurricanesandy.html">> Hurricane Hackers</a>
+        <a href="../actions/fliehkraft.html">> Fliehkraft, Berlin</a>
+        <a href="../actions/ecovillage.html">> Eco Village</a>
+        <p>Portfolio > Academia:</p>
+        <hr>
+        <a href="../academia/ch.html">> Secondary: Christ's Hospital</a>
+        <a href="../academia/durham.html">> Uni: Durham</a>
+        <a href="../academia/mit.html">> MIT Graduate App and Collab</a>
+        <p>Portfolio > Creative:</p>
+        <hr>
+        <a href="../art/writing.html">> Writing</a>
+        <a href="../art/artwork.html">> Artwork</a>
+        <a href="../art/concepts.html">> Concepts & Design</a>
+        <p>Portfolio > Talks:</p>
+        <hr>
+        <a href="../talks/ccc.html">> Assembly + Lightning Talk @CCC</a>
+        <a href="../talks/pp_intl.html">> RW Society @PP Intl</a>
+        <a href="../talks/fabrica.html">> Trust but Verify @Fabrica</a>
+        <a href="../talks/frontline.html">> Revolutionary Apps @Frontline Club</a>
+        <a href="../talks/talklist.html">> List: Talks</a>
+        <p>Lists of things I like:</p>
+        <hr>
+        <a href="../art/poetrylist.html">> Poetry</a>
+        <a href="../art/filmlist.html">> Film</a>
+        <a href="../art/booklist.html">> Books</a>
+        <a href="../art/musiclist.html">> Music</a>
+        <p>Service > Consulting</p>
+        <hr>
+        <a href="../service/engineering.html">> IT / Engineering</a>
+        <a href="../service/security.html">> Security</a>
+        <a href="../service/sustainability.html">> Sustainability</a>
+        <p>Service > Programming:</p>
+        <hr>
+        <a href="../service/programming.html">> Examples of My Work</a>
+        <p>Service > Webdev:</p>
+        <hr>
+        <a href="../service/web.html">> Webdesign and Development</a>
+        <a href="../service/web_examples.html">> Examples of My Work</a>
+        <a href="../service/web_feedback.html">> Client Feedback</a>
+        <p>Service > PC Repair</p>
+        <hr>
+        <a href="../service/onsite_repair.html">> Onsite Support</a>
+        <a href="../service/remote_repair.html">> Remote Support</a>
+        <a href="../service/repair_feedback.html">> Reviews</a>
+        <p>Service > Clients:</p>
+        <hr>
+        <a href="../service/current_clients.html">> Current Clients</a>
+        <a href="../service/previous_clients.html">> Previous Clients</a>
+        <p>Service > Personal:</p>
+        <hr>
+        <a href="../service/mentoring.html">> Mentoring</a>
+        <a href="../service/business_development.html">> Business Development</a>
       </div>
-
-
-      <div id="project-details">
-        <div class="subheader-text">Project Details / Background</div>
-        <div class="project-details-content">
-          <div class="body-text">Nanode is an open source Arduino-like board that has in-built web connectivity. It connects to a range of wireless, wired and ethernet interfaces. It allows you to develop web based sensor and control systems - giving you web access to six analogue sensor lines and six digital I/O lines. It costs under £20 as an easy build it yourself kit. Nanode was designed with Hacking in mind. </div>
-        </div>
-      </div>
-
-      <!-- IMAGE GALLERY -->
-      <div id="project-gallery">
-        <!-- TODO - Change the 'subheader-text' to whatever you want the Gallery section header to say -->
-        <div class="subheader-text">Image Gallery</div>
-        <div class="project-gallery-content">
-
-          <div class="gallery-image-container half-width">
-            <img loading="lazy" src="../assets/images/code.jpeg" class="gallery-image">
-            <span class="image-caption">Give your image a caption. People love context.</span>
-          </div>
-          <div class="gallery-image-container half-width">
-            <img loading="lazy" src="../assets/images/sketchbook.jpeg" class="gallery-image">
-            <span class="image-caption">Give your image a caption. People love context.</span>
-          </div>
-          <div class="gallery-image-container">
-            <img loading="lazy" src="../assets/images/camera.jpeg" class="gallery-image">
-            <span class="image-caption">Give your image a caption. People love context.</span>
-          </div>
+    </div>
+    <!-- MAIN PAGE CONTENT -->
+    <div id="main-content">
+      <!-- PROJECT HEADER -->
+      <div id="project-header">
+        <div class="main-title">What my clients say:</div>
+        <div class="body-text">
+          <h2>"Best I have encountered."</h2>
+          <p>By Natasha - 22 Apr 2010</p>
+          <p>Granted I've not encountered many pc repairers. What I've seen has mostly been a room mate studying computing who is AWFUL and pc world which is amazingly rubbish. Sam appears to be of a different ilk. There should be more like him. He's worth every penny.</p>
+          <p>&nbsp;</p>
+          <h2>"Excellent!"</h2>
+          <p>By yourmywifenowdave - Sep 23, 2009</p>
+          <p>Dropped the laptop off in the evening crippled with viruses etc. Got it back the very next day and it runs like a dream. Highly recommended!!</p>
+          <p>&nbsp;</p>
+          <h2>DEll studio</h2>
+          <p>By scott - Jul 25, 2009</p>
+          <p>My laptop was running slow and had a number of issues with unwanted applications so on and also required anti malware etc loading. Sam was very skilled in his field and could explain in plain english what he was going to do and also how this was going to benefit my laptop, giving me advice on things to avoid for the future. It seems to me that Sam is committed to his trade and that of the need of the customer, thus a very honest service and fast service. I will be returning!</p>
+          <p>&nbsp;</p>
+          <h2>"Excellent service"</h2>
+          <p>By Kaloyan - Mar 12, 2009</p>
+          <p>Very personal service, unlike many computer repair companies and got the job done very quickly. Clearly knew exactly what he was doing and even gave me some solid advice for keeping my computer virus/problem free in the future! Brilliant, would highly recommend him to anyone!</p>
+          <p>&nbsp;</p>
+          <h2>"Multiple repairs"</h2>
+          <p>By Phil - Mar 12, 2009</p>
+          <p>Excellent repair service, helped with formatting and recovering data on multiple hard drives as well as repairing numerous faults on laptops and desktop PCs. Very good knowledge of latest technology and programs and also advised on programs and tips to prevent the problems happening again, would recommend to anyone looking for a repair service that does not just fix the symptoms.</p>
+          <p>&nbsp;</p>
+          <h2>"Outstanding"</h2>
+          <p>By Joe - Mar 12, 2009
+          <p>
+          <p>Reassuring, communicative and thorough. Informed me at very step what was happening to my precious laptop and OK'd it with me first.</p>
         </div>
       </div>
     </div>
-
     <!-- FOOTER -->
     <div id="footer">
-
       <a class="icon-link" href="mailto:samuelcarlisle@gmail.com">
-        <img loading="lazy" src="../assets/icons/mail.svg" class="footer-icon"/>
+        <img loading="lazy" src="../assets/icons/mail.svg" class="footer-icon" />
       </a>
     </div>
-
   </body>
-  </html>
+</html>
