added the hurricane hackers logo to the page

--- a/actions/hurricanehackers.html
+++ b/actions/hurricanehackers.html
@@ -131,7 +131,7 @@ HoomanBean(w/ Voice), Engineer, Entrepreneur, H4ck3r, Gardener
       3. We promise to do our best to “Empower You to provide disaster relief” and hope you will join us in creating a better world
       <br>
       4. If you believe what we believe, let’s change the world together”</div>
-      <img loading="lazy" class="project-header-image" src="../assets/images/nanode.png">
+      <img loading="lazy" class="project-header-image" src="../assets/images/hurricane_hackers.png">
       </div>
 
 
