--- a/projects/animachine.html
+++ b/projects/animachine.html
@@ -59,7 +59,7 @@ HoomanBean(w/ Voice), Engineer, Entrepreneur, H4ck3r, Gardener
       <a href="../actions/ucloccupation.html">> UCL Occupation</a>
       <a href="../actions/occupylondon.html">> Occupy London Tech Team</a>
       <a href="../actions/cryptoparty.html">> Cryptoparty London</a>
-      <a href="../actions/hurricanesandy.html">> Hurricane Hackers</a>
+      <a href="../actions/hurricanehackers.html">> Hurricane Hackers</a>
       <a href="../actions/fliehkraft.html">> Fliehkraft, Berlin</a>
       <a href="../actions/ecovillage.html">> Eco Village</a>
       <p>Portfolio > Academia:</p>
