--- a/talks/fabrica.html
+++ b/talks/fabrica.html
@@ -59,7 +59,7 @@ HoomanBean(w/ Voice), Engineer, Entrepreneur, H4ck3r, Gardener
       <a href="../actions/ucloccupation.html">> UCL Occupation</a>
       <a href="../actions/occupylondon.html">> Occupy London Tech Team</a>
       <a href="../actions/cryptoparty.html">> Cryptoparty London</a>
-      <a href="../actions/hurricanesandy.html">> Hurricane Hackers</a>
+      <a href="../actions/hurricanehackers.html">> Hurricane Hackers</a>
       <a href="../actions/fliehkraft.html">> Fliehkraft, Berlin</a>
       <a href="../actions/ecovillage.html">> Eco Village</a>
       <p>Portfolio > Academia:</p>
@@ -121,7 +121,7 @@ HoomanBean(w/ Voice), Engineer, Entrepreneur, H4ck3r, Gardener
     <div id="project-header">
 
       <div class="main-title">Trust but Verify</div>
-      <div class="body-text">Nanode is an open source Arduino-like board that has in-built web connectivity. It is a low cost platform for creative development of web connected ideas. Languages: C</div>
+      <div class="body-text">A talk about change makers, paradigm shifters </div>
       <img loading="lazy" class="project-header-image" src="../assets/images/trust_but_verify.png">
       </div>
 
