added some pictures to the talks pages

--- a/talks/fabrica.html
+++ b/talks/fabrica.html
@@ -120,16 +120,16 @@ HoomanBean(w/ Voice), Engineer, Entrepreneur, H4ck3r, Gardener
     <!-- PROJECT HEADER -->
     <div id="project-header">
 
-      <div class="main-title">Trust but Verify</div>
-      <div class="body-text">A talk about change makers, paradigm shifters </div>
+      <div class="main-title">Lecture: Trust but Verify @ Fabrica, Treviso (Italy).</div>
+      <div class="body-text">Intro</div>
       <img loading="lazy" class="project-header-image" src="../assets/images/trust_but_verify.png">
       </div>
 
 
       <div id="project-details">
-        <div class="subheader-text">Project Details / Background</div>
+        <div class="subheader-text">Background</div>
         <div class="project-details-content">
-          <div class="body-text">Nanode is an open source Arduino-like board that has in-built web connectivity. It connects to a range of wireless, wired and ethernet interfaces. It allows you to develop web based sensor and control systems - giving you web access to six analogue sensor lines and six digital I/O lines. It costs under £20 as an easy build it yourself kit. Nanode was designed with Hacking in mind. </div>
+          <div class="body-text">More Info</div>
         </div>
       </div>
 
