--- a/talks/pirate_party_intl.html
+++ b/talks/pirate_party_intl.html
@@ -120,16 +120,16 @@ HoomanBean(w/ Voice), Engineer, Entrepreneur, H4ck3r, Gardener
     <!-- PROJECT HEADER -->
     <div id="project-header">
 
-      <div class="main-title">Nanode</div>
-      <div class="body-text">Nanode is an open source Arduino-like board that has in-built web connectivity. It is a low cost platform for creative development of web connected ideas. Languages: C</div>
-      <img loading="lazy" class="project-header-image" src="../assets/images/nanode.png">
+      <div class="main-title">Disruptive Technologies for a Read / Write Society</div>
+      <div class="body-text">Intro</div>
+      <img loading="lazy" class="project-header-image" src="../assets/images/pp_intl.png">
       </div>
 
 
       <div id="project-details">
-        <div class="subheader-text">Project Details / Background</div>
+        <div class="subheader-text">Background</div>
         <div class="project-details-content">
-          <div class="body-text">Nanode is an open source Arduino-like board that has in-built web connectivity. It connects to a range of wireless, wired and ethernet interfaces. It allows you to develop web based sensor and control systems - giving you web access to six analogue sensor lines and six digital I/O lines. It costs under £20 as an easy build it yourself kit. Nanode was designed with Hacking in mind. </div>
+          <div class="body-text">More Info</div>
         </div>
       </div>
 
