added image for frontline club talk

--- a/talks/frontline.html
+++ b/talks/frontline.html
@@ -122,7 +122,7 @@ HoomanBean(w/ Voice), Engineer, Entrepreneur, H4ck3r, Gardener
 
       <div class="main-title">Panel Discussion @ Frontline Club, London (UK).</div>
       <div class="body-text">On the media - The protesters toolkit - revolutionary apps.</div>
-      <img loading="lazy" class="project-header-image" src="../assets/images/nanode.png">
+      <img loading="lazy" class="project-header-image" src="../assets/images/frontline_protesters_toolkit.png">
       </div>
 
 
