added some new pictures

--- a/index.html
+++ b/index.html
@@ -349,7 +349,7 @@ HoomanBean(w/ Voice), Engineer, Entrepreneur, H4ck3r, Gardener
             </a>
           </div>
           <div class="project-card">
-            <img loading="lazy" src="./assets/images/fliehkraft.jpg" class="project-image">
+            <img loading="lazy" src="./assets/images/fliehkraft_lab_early.jpg" class="project-image">
             <div class="project-card-text-container">
               <div class="subheader-text project-title">Fliehkraft</div>
               <div class="body-text project-card-text">Participative Digital Fabrication Space in a Residential Project for people migrating from the Middle East.</div>
@@ -360,7 +360,7 @@ HoomanBean(w/ Voice), Engineer, Entrepreneur, H4ck3r, Gardener
             </a>
           </div>
           <div class="project-card">
-            <img loading="lazy" src="./assets/images/hurricanehackers.jpg" class="project-image">
+            <img loading="lazy" src="./assets/images/hurricane_hackers.png" class="project-image">
             <div class="project-card-text-container">
               <div class="subheader-text project-title">Hurricane Hackers</div>
               <div class="body-text project-card-text">Remote Disaster Relief and communications to support those affected by Hurricane Sandy</div>
