--- a/talks/ccc_cryptoparty.html
+++ b/talks/ccc_cryptoparty.html
@@ -121,10 +121,12 @@ HoomanBean(w/ Voice), Engineer, Entrepreneur, H4ck3r, Gardener
     <div id="project-header">
 
       <div class="main-title">CCC Cryptopaty Assembly</div>
-      <div class="body-text">Intro</div>
+      <div class="body-text">1. Participated in several Cryptoparty Assemblies at the Chaos Communication Congress:
+      <a href="https://events.ccc.de/congress/2012/wiki/Cryptoparty" target="_blank">2012</a> and <a href="https://events.ccc.de/congress/2013/wiki/Assembly:Cryptoparty" target="_blank">2013</a>
+<br><br>
+    2. Organised a <a href="https://events.ccc.de/congress/2012/wiki/Cryptoparty_Handbook" target="_blank">book sprint session</a>  at the congress in 2012 to encourage collaboration on the handbook: </div>
       <img loading="lazy" class="project-header-image" src="../assets/images/nanode.png">
       </div>
-
 
       <div id="project-details">
         <div class="subheader-text">Background</div>
